# ZPG-refactored

./: CMakeLists.txt  README.md
models/: bushes.h  circle.h  cube.h  plain.h  sphere.h  square.h  triangle.h
shaders/: cameraVert.glsl  frag2.frag  material.frag  material.vert  skyboxFrag.glsl  skyboxVert.glsl  texVert.glsl  transFrag.glsl  transVert.glsl  unifVert.glsl
src/: App.cpp  App.hpp  Controls.cpp  Controls.hpp  Main.cpp
src/helpers/: Callbacks.cpp  Callbacks.hpp
src/objects/: BezierCurve.hpp  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Scene.hpp
src/objects/drawable/: Bush.cpp  Bush.hpp  Creature.cpp  Creature.hpp  Cube.cpp  Cube.hpp  House.cpp  House.hpp  Login.cpp  Login.hpp  Plain.cpp  Plain.hpp  Sphere.cpp  Sphere.hpp  Tree.cpp  Tree.hpp
src/objects/scenes/: BezierScene.cpp  BezierScene.hpp  EmptyScene.cpp  EmptyScene.hpp  IndependantScene.cpp  IndependantScene.hpp  MaterialScene.cpp  MaterialScene.hpp  RectangleScene.cpp  RectangleScene.hpp  RotatingScene.cpp  RotatingScene.hpp  SkyboxScene.cpp  SkyboxScene.hpp  TexturedScene.cpp  TexturedScene.hpp  TriangleScene.cpp  TriangleScene.hpp
src/objects/transformations/: Identity.hpp  Matrix.hpp  Rotation.hpp  Scale.hpp  Transformation.hpp  TransformationComposite.hpp  Translation.hpp
src/shaders/: ColorMaterial.hpp  Material.hpp  Shader.cpp  Shader.hpp  SkyboxMaterial.hpp  SkyboxTexture.cpp  SkyboxTexture.hpp  Texture.cpp  Texture.hpp  TextureMaterial.hpp
